[gd_scene load_steps=25 format=3 uid="uid://cnpbuybm4ib8l"]

[ext_resource type="Script" uid="uid://cdbq2ivgoedmx" path="res://scenes/ui/game_menu/character_portrait.gd" id="1_vmxyi"]
[ext_resource type="Texture2D" uid="uid://cysvrf3te3pum" path="res://assets/ui/corners.png" id="1_wnssw"]
[ext_resource type="Texture2D" uid="uid://vqj2vmedouth" path="res://assets/characters/Evil.png" id="2_8lw80"]
[ext_resource type="AudioStream" uid="uid://dhlm5bhwq1c4t" path="res://assets/audio/homemade/SFX/pop.mp3" id="4_4mhq2"]
[ext_resource type="Texture2D" uid="uid://b82dfmy46isp3" path="res://assets/ui/character_portrait_buttons.png" id="4_e8jxe"]
[ext_resource type="AudioStream" uid="uid://bymhdcicx5ap3" path="res://assets/audio/homemade/SFX/Woosh.mp3" id="5_joi4j"]
[ext_resource type="AudioStream" uid="uid://c5cnketelr6mc" path="res://addons/sfx/Retro Blop 18.wav" id="7_byxqf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y7ond"]
texture = ExtResource("1_wnssw")
texture_margin_left = 9.0
texture_margin_top = 9.0
texture_margin_right = 9.0
texture_margin_bottom = 9.0
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n2ncc"]
bg_color = Color(0.49, 0.39445, 0.2695, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="AtlasTexture" id="AtlasTexture_vw8cv"]
atlas = ExtResource("2_8lw80")
region = Rect2(0, 0, 100, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_0g68i"]
atlas = ExtResource("4_e8jxe")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cxc3"]
atlas = ExtResource("4_e8jxe")
region = Rect2(32, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_f5ulf"]
load_path = "res://.godot/imported/character_portrait_buttons.png-de5eacc9ea5c232c27fa5af78e1c220a.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_ksb71"]
atlas = SubResource("CompressedTexture2D_f5ulf")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eywpt"]
atlas = SubResource("CompressedTexture2D_f5ulf")
region = Rect2(0, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_frrk3"]
load_path = "res://.godot/imported/character_portrait_buttons.png-de5eacc9ea5c232c27fa5af78e1c220a.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_2h4cs"]
atlas = SubResource("CompressedTexture2D_frrk3")
region = Rect2(16, 16, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_d448c"]
load_path = "res://.godot/imported/character_portrait_buttons.png-de5eacc9ea5c232c27fa5af78e1c220a.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_u1ubo"]
atlas = SubResource("CompressedTexture2D_d448c")
region = Rect2(16, 0, 16, 16)

[sub_resource type="Animation" id="Animation_d0xoq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_6pixq"]
resource_name = "focus"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03, 0.09, 0.15),
"transitions": PackedFloat32Array(1, 0.5, 0.5, 0.5),
"update": 0,
"values": [0.0, 0.0349066, -0.0174533, 0.0]
}

[sub_resource type="Animation" id="Animation_1tuc4"]
resource_name = "select"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 0.5, 0.5),
"update": 0,
"values": [Vector2(0.9, 0.9), Vector2(1.15, 1.15), Vector2(1.1, 1.1)]
}

[sub_resource type="Animation" id="Animation_esmic"]
resource_name = "selected"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [-0.0872665, 0.0872665]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xnnei"]
_data = {
&"RESET": SubResource("Animation_d0xoq"),
&"focus": SubResource("Animation_6pixq"),
&"select": SubResource("Animation_1tuc4"),
&"selected": SubResource("Animation_esmic")
}

[node name="CharacterPortrait" type="Button"]
custom_minimum_size = Vector2(100, 160)
offset_right = 100.0
offset_bottom = 160.0
theme_override_styles/focus = SubResource("StyleBoxTexture_y7ond")
script = ExtResource("1_vmxyi")
associated_character = "Neuro-sama"

[node name="Hole" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(100, 160)
layout_mode = 0
offset_right = 10.0
offset_bottom = 10.0
theme_override_styles/panel = SubResource("StyleBoxFlat_n2ncc")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = -5.0
offset_top = -5.0
offset_right = 105.0
offset_bottom = 165.0
pivot_offset = Vector2(55, 85)

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_vw8cv")

[node name="Buttons" type="HBoxContainer" parent="."]
visible = false
show_behind_parent = true
texture_filter = 1
layout_mode = 2
offset_left = 8.0
offset_top = 139.0
offset_right = 88.0
offset_bottom = 155.0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="MoveLeft" type="TextureButton" parent="Buttons"]
layout_mode = 2
action_mode = 0
texture_normal = SubResource("AtlasTexture_0g68i")
texture_pressed = SubResource("AtlasTexture_0g68i")
texture_hover = SubResource("AtlasTexture_3cxc3")
texture_disabled = SubResource("AtlasTexture_0g68i")
texture_focused = SubResource("AtlasTexture_3cxc3")
flip_h = true

[node name="Add" type="TextureButton" parent="Buttons"]
layout_mode = 2
action_mode = 0
texture_normal = SubResource("AtlasTexture_ksb71")
texture_pressed = SubResource("AtlasTexture_ksb71")
texture_hover = SubResource("AtlasTexture_eywpt")
texture_disabled = SubResource("AtlasTexture_ksb71")
texture_focused = SubResource("AtlasTexture_eywpt")

[node name="Remove" type="TextureButton" parent="Buttons"]
layout_mode = 2
action_mode = 0
texture_normal = SubResource("AtlasTexture_2h4cs")
texture_pressed = SubResource("AtlasTexture_2h4cs")
texture_hover = SubResource("AtlasTexture_u1ubo")
texture_disabled = SubResource("AtlasTexture_2h4cs")
texture_focused = SubResource("AtlasTexture_u1ubo")

[node name="MoveRight" type="TextureButton" parent="Buttons"]
layout_mode = 2
action_mode = 0
texture_normal = SubResource("AtlasTexture_0g68i")
texture_pressed = SubResource("AtlasTexture_0g68i")
texture_hover = SubResource("AtlasTexture_3cxc3")
texture_disabled = SubResource("AtlasTexture_0g68i")
texture_focused = SubResource("AtlasTexture_3cxc3")

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_right = 110.0
offset_bottom = 170.0
texture = SubResource("AtlasTexture_vw8cv")

[node name="focus" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_4mhq2")
volume_db = -25.0
pitch_scale = 4.0
bus = &"SFX"

[node name="woosh" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_joi4j")
volume_db = -25.0
pitch_scale = 1.5
bus = &"SFX"

[node name="pop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_4mhq2")
volume_db = -20.0
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xnnei")
}
next/select = &"selected"

[node name="buttons_up" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_byxqf")
volume_db = -23.0
pitch_scale = 2.0
bus = &"SFX"

[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="pressed" from="Buttons/MoveLeft" to="." method="_on_move_left_pressed"]
[connection signal="pressed" from="Buttons/Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="Buttons/Remove" to="." method="_on_remove_pressed"]
[connection signal="pressed" from="Buttons/MoveRight" to="." method="_on_move_right_pressed"]
